service/cluster/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: ingress-cert
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cluster-virtualservice
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - cluster-gateway
  http:
    - match:
        - headers:
            environment:
              exact: uat
      route:
        - destination:
            host: gateway-uat.default.svc.cluster.local
            port:
              number: 8000
    - match:
        - headers:
            environment:
              exact: prod
      route:
        - destination:
            host: gateway-prod.default.svc.cluster.local
            port:
              number: 8000
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cluster-dr
  namespace: default
spec:
  host: gateway.default.svc.cluster.local
  subsets:
    - name: uat
      labels:
        environment: uat
    - name: prod
      labels:
        environment: prod
